@@ -152,7 +152,8 @@ ELEMENTS_ARG_ENABLE(ethernet, [include Ethernet elements (on by default)], yes)
 ELEMENTS_ARG_ENABLE(ip, [include IP, UDP, and TCP elements (on by default)], yes)
 ELEMENTS_ARG_ENABLE(etherswitch, [include Ethernet switch elements (on by default)], yes)
 ELEMENTS_ARG_ENABLE(ipsec, [include IP security elements], no)
-ELEMENTS_ARG_ENABLE(radio, [include radio elements (on by default)], yes)
+ELEMENTS_ARG_ENABLE(radio, [include radio elements], no)
+ELEMENTS_ARG_ENABLE(local, [include local elements], no)
 
 elements_vpath=`echo "$element_groups" | sed -e ['s/ \([^ ][^ ]*\)/:$(top_srcdir)\/elements\/\1/g']`
 AC_SUBST(elements_vpath)
